--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "koa-logger": "^3.2.1",
     "koa-onerror": "^4.2.0",
     "koa-session": "^6.4.0",
-    "koa-static": "^5.0.0"
+    "koa-static": "^5.0.0",
+    "md5": "^2.3.0",
+    "mongoose": "^7.0.3"
   },
   "devDependencies": {
     "@types/debug": "^4.1.7",
@@ -46,6 +48,7 @@
     "@types/koa-session": "^6.4.0",
     "@types/koa-static": "^4.0.2",
     "@types/koa__router": "^12.0.0",
+    "@types/md5": "^2.3.2",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "eslint": "^8.38.0",
