--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   // "extends": "./config/base",
   // "files": ['app.ts', 'index.ts'],
-  "include": ["./**/*"],
+  "include": ["./bin/**/*", "./src/**/*"],
   // "exclude": [ "./src/temp/**/*" ],
   "compilerOptions": {
-    "baseUrl": "./",
+    "baseUrl": ".",
     "module": "ESNext",
     "target": "ESNext",
     // "lib": [ "ESNext", "DOM" ],
