Use jwt instead of koa-jwt.

--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "art-template": "^4.13.2",
     "debug": "^4.3.4",
     "joi": "^17.9.1",
+    "jsonwebtoken": "^9.0.0",
     "koa": "^2.14.2",
     "koa-art-template": "^1.1.1",
     "koa-bodyparser": "^4.4.0",
     "koa-json": "^2.0.2",
-    "koa-jwt": "^4.0.4",
     "koa-logger": "^3.2.1",
     "koa-onerror": "^4.2.0",
     "koa-session": "^6.4.0",
