--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "baseUrl": ".",
     "module": "ESNext",
     "target": "ESNext",
-    // "lib": [ "ESNext", "DOM" ],
+    "lib": [ "DOM", "ESNext" ],
     "typeRoots": ["./types", "node_modules/@types"],
     "outDir": "./dist",
     // "outFile": "./dist/bundle.js",
