--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "Yoonge <7884008@qq.com>",
-  "description": "Conduit - A SSR RealWorld example App built with Art-Template + ESLint + JWT + Koa2 + Prettier + TypeScript.",
+  "description": "Conduit - A SSR RealWorld example application built with Art-Template + ESLint + JWT + Koa2 + Prettier + TypeScript.",
   "keywords": [
     "Art-Template",
     "Conduit",
@@ -36,7 +36,6 @@
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.1",
     "koa-onerror": "^4.2.0",
-    "koa-session": "^6.4.0",
     "koa-static": "^5.0.0",
     "md5": "^2.3.0",
     "mongoose": "^7.0.3",
@@ -49,7 +48,6 @@
     "@types/koa-bodyparser": "^4.3.10",
     "@types/koa-json": "^2.0.20",
     "@types/koa-logger": "^3.1.2",
-    "@types/koa-session": "^6.4.0",
     "@types/koa-static": "^4.0.2",
     "@types/koa__router": "^12.0.0",
     "@types/md5": "^2.3.2",
